--- a/data-bliding.html
+++ b/data-bliding.html
@@ -10,7 +10,7 @@
     <div id="data_binding">
         <h1 v-bind:title="tagMessage"> {{message}} </h1>
     
-        <h2>{{message.toUpperCase()}}</h2>
+        <h2>o Modo de passar por toUpperCase {{message.toUpperCase()}}</h2>
      <p> Vem por como? por  {{person.name}}. O numero : {{person.age}} vem por parametro</p> 
    
     <span v-html="tag"></span> 
